[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[lib]
path = "src/interact.rs"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "default-tls"] }
serde_json = "1.0.145"
toml = "0.8.6"

[dependencies.tournament-hub]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.57.1"

[dependencies.multiversx-sc]
version = "0.57.1"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
chain-simulator-tests = []
